--- a/html_reading_cvs_reading.ipynb
+++ b/html_reading_cvs_reading.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "html_reading/cvs_reading.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNxACwiwehToavbOORy+YmY",
+      "authorship_tag": "ABX9TyNwCF1qV/xVW4TVzrbkuTQv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,7 +35,7 @@
         "# with refiniery\r\n",
         "import pandas as pd "
       ],
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -43,10 +43,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 171
+          "height": 167
         },
         "id": "NWvvWSuqKCOp",
-        "outputId": "cba4d1ad-0fb1-442e-c0af-48ce436d9447"
+        "outputId": "9d187a41-0848-4320-acd0-5c11036a6f5c"
       },
       "source": [
         "# Note that you can create a pandas dataframe from a python dictionary\r\n",
@@ -56,7 +56,7 @@
         "\r\n",
         "bank_client_df"
       ],
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -130,7 +130,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 2
+          "execution_count": 16
         }
       ]
     },
@@ -141,12 +141,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bN8kv7ijKCSE",
-        "outputId": "ff13a934-b121-4332-b480-c025d0b372c2"
+        "outputId": "29dd4685-fa11-41c6-ee2f-0edf72d88fcd"
       },
       "source": [
         "type(bank_client_df)"
       ],
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -158,7 +158,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 3
+          "execution_count": 17
         }
       ]
     },
@@ -169,7 +169,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "27X57IbpKK7u",
-        "outputId": "0f3913b9-2e6a-4817-f072-ef1199f08c21"
+        "outputId": "b8c966fe-1573-4b4b-8623-94275d5016b2"
       },
       "source": [
         "#calculates savings from table \r\n",
@@ -177,7 +177,7 @@
         "print(savings_left)\r\n",
         "print('Total savings left total = {}'.format(savings_left.sum()))"
       ],
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -200,14 +200,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "88bzqWaqKeJv",
-        "outputId": "bf190289-68b7-4726-e4c5-df3caf0b1c2c"
+        "outputId": "0fc3b4f0-4872-4376-d088-2890c18d9698"
       },
       "source": [
         "#cvs_read_test\r\n",
         "from google.colab import drive\r\n",
         "drive.mount('/content/drive')\r\n"
       ],
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -225,9 +225,10 @@
       },
       "source": [
         "\r\n",
+        "\r\n",
         "bank_df = pd.read_csv('/content/drive/MyDrive/PhoelTechnologies_MLResearch /ML_Samples/Pandas/bank_client_information.csv')"
       ],
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -235,15 +236,15 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 415
+          "height": 407
         },
         "id": "QG1RO5Z-NQZr",
-        "outputId": "df2d07b5-bbe3-4dd0-dddd-1f9445c83c75"
+        "outputId": "c4ee1f84-f00d-45ac-98de-ecbb9245db32"
       },
       "source": [
         "bank_df\r\n"
       ],
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -352,7 +353,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 10
+          "execution_count": 21
         }
       ]
     },
@@ -364,7 +365,7 @@
       "source": [
         "df_GDP = pd.read_html('https://en.wikipedia.org/wiki/Minnesota', match = 'Election results from statewide races') #uses matching to find specific table"
       ],
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -374,9 +375,9 @@
       },
       "source": [
         "# Reads table from website\r\n",
-        "house_prices_df = pd.read_html('https://www.nasdaq.com/market-activity/stocks/cvs/earnings')"
+        "house_prices_df = pd.read_html('https://www.livingin-canada.com/house-prices-canada.html')"
       ],
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -387,19 +388,95 @@
       "source": [
         "umd_tuition = pd.read_html('https://academiccatalog.umd.edu/undergraduate/fees-expenses-financial-aid/tuition-fees/')"
       ],
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "puF7mYRHT9Qj"
+        "id": "puF7mYRHT9Qj",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 197
+        },
+        "outputId": "57a69ce2-16a5-4cf3-bd48-bc795894d3b4"
       },
       "source": [
         "umd_tuition[0]"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Fee</th>\n",
+              "      <th>Total Academic Year Cost</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>Tuition</td>\n",
+              "      <td>$8,824</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>Add Differential Tuition for full-time juniors...</td>\n",
+              "      <td>$2,856</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>Mandatory Fees (includes Tech fee) Maximum cha...</td>\n",
+              "      <td>$1,955</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>Board (Resident Dining Plan - Base Plan)</td>\n",
+              "      <td>$4,760</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>Room (Standard 2-person w/AC, includes Telecom...</td>\n",
+              "      <td>$8,064</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                                                 Fee Total Academic Year Cost\n",
+              "0                                            Tuition                   $8,824\n",
+              "1  Add Differential Tuition for full-time juniors...                   $2,856\n",
+              "2  Mandatory Fees (includes Tech fee) Maximum cha...                   $1,955\n",
+              "3           Board (Resident Dining Plan - Base Plan)                   $4,760\n",
+              "4  Room (Standard 2-person w/AC, includes Telecom...                   $8,064"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 25
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -407,9 +484,9 @@
         "id": "TdqeKUlUUiXK"
       },
       "source": [
-        ""
+        "\r\n"
       ],
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -417,15 +494,15 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 325
+          "height": 317
         },
         "id": "Zg2yGLWdOP1L",
-        "outputId": "15d8dc33-7285-40af-aa86-fd086796e8c7"
+        "outputId": "264964dc-bafd-49c4-f986-f6daea6b1b72"
       },
       "source": [
         "house_prices_df[0]"
       ],
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -531,7 +608,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 17
+          "execution_count": 26
         }
       ]
     },
@@ -540,15 +617,15 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 846
+          "height": 827
         },
         "id": "KrApAzs1OOGC",
-        "outputId": "cd655cb6-76fa-4675-b873-4213d370f0e6"
+        "outputId": "44d1f68f-4dc0-4d6e-86c2-5a931db5a8ef"
       },
       "source": [
         "df_GDP[0]\r\n"
       ],
-      "execution_count": null,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -825,9 +902,31 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 32
+          "execution_count": 27
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LJsXGhBzoC-O"
+      },
+      "source": [
+        "\r\n"
+      ],
+      "execution_count": 27,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Tc1bK7CkoD8a"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
